--- a/src/scss/_base/_reset.scss
+++ b/src/scss/_base/_reset.scss
@@ -1,10 +1,17 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: normal;
   font-style: normal;
 }
@@ -14,9 +21,15 @@ ol {
   list-style-type: none;
 }
 
-button, input, textarea {
-  color: inherit;
+button,
+input,
+textarea {
+  border-width: 0;
+  outline: none;
+  box-shadow: none;
   font: inherit;
+  color: inherit;
+  background-color: transparent;
 }
 
 img {
@@ -28,6 +41,7 @@ img {
 a {
   color: inherit;
   text-decoration: none;
+
   &:hover {
     text-decoration: none;
   }
