--- a/src/scss/_base/_theme.scss
+++ b/src/scss/_base/_theme.scss
@@ -1,53 +1,85 @@
 :root {
-  --bg-color: radial-gradient(70.24% 70.24% at 49.87% 29.76%, rgba(19, 14, 0, 0.9) 0%, #000000 100%);
+  --bg-color: radial-gradient(70.24% 70.24% at 49.87% 29.76%, rgba(19, 14, 0, .9) 0%, #000 100%);
   --text-color: #FCFBF7;
   --pale-color: #918F8A;
   --img-filter: grayscale(1);
+  --active-button: #FCFBF7;
 
+  //BARS
   --bright-bar: radial-gradient(91.67% 122.17% at 69.17% -11.17%, #FFA300 0%, #2D1C00 100%);
-  --base-bar: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%),
-  radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000000 0%, #231900 0.01%, #4D4D4D 100%);
-  --shadow-bright-bar: 0px 0px 20px 0px #FFB039 80% inset, -1px 1px 1px 0px #FFFFFF 50% inset;
-  --shadow-base-bar: 0px 0px 20px 0px #CFCFCF 50% inset, -1px 1px 1px 0px #FFFFFF 50% inset;
+  --base-bar: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .8) 100%), radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000 0%, #231900 .01%, #4D4D4D 100%);
+  --shadow-bright-bar: inset 0 0 20px 0 rgba(255, 162, 0, .4), inset -1px 1px 1px 0 rgba(255, 255, 255, .4);
+  --shadow-base-bar: inset 0 0 20px 0 rgba(103, 103, 103, .6), inset -1px 1px 1px 0 rgba(255, 255, 255, .2);
 
-  --bright-radial: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 0, 0.8) 0%, rgba(91, 66, 0, 0.8) 100%);
-  --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(99, 63, 0, 0.5) 72.92%, rgba(15, 9, 0, 0.5) 100%);
-  --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(77, 77, 77, 0.5) 71.88%, rgba(56, 41, 0, 0.5) 100%);
-  --light-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(155, 155, 155, 0.5) 71.88%, rgba(56, 41, 0, 0.5) 100%);
+  //DIAGRAM
+  --bright-radial: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 0, .8) 0%, rgba(91, 66, 0, .8) 100%);
+  --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(99, 63, 0, .5) 72.92%, rgba(15, 9, 0, .5) 100%);
+  --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(77, 77, 77, .5) 71.88%, rgba(56, 41, 0, .5) 100%);
+  --light-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(155, 155, 155, .5) 71.88%, rgba(56, 41, 0, .5) 100%);
+  --bright-radial-shadow: 0 0 20px -8px rgba(248, 158, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 162, 0, .9);
+  --pale-radial-shadow: 0 0 20px -8px rgba(147, 93, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(202, 129, 0, .9);
+  --dark-radial-shadow: 0 0 20px -8px rgba(96, 96, 96, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(38, 38, 38, .9);
+  --light-radial-shadow: 0 0 20px -8px rgba(0, 0, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(139, 139, 139, .9);
 
-  --bright-top: radial-gradient(5254.03% 1343.36% at 56.33% 94.86%, rgba(32, 21, 2, 0.8) 0%, rgba(199, 131, 10, 0.8) 100%);
-  --bright-right: radial-gradient(3693.69% 487.92% at 88.04% 84.26%, #201502 0%, #C7830A 100%);
-  --bright-left: radial-gradient(2258.03% 620.37% at 83.33% 88.95%, #201502 0%, #C7830A 100%);
+  //CARDS
+  --hover-card: radial-gradient(85.62% 148.33% at 49.85% 100%, rgba(68, 58, 42, .7864) 0%, rgba(0, 0, 0, .8) 100%);
+  --active-card: radial-gradient(91.67% 122.17% at 69.17% -11.17%, #FFA300 0%, #2D1C00 100%);
+  --hover-card-shadow: inset -1px 1px 1px rgba(255, 255, 255, .2), inset 2px 2px 16px rgba(255, 255, 255, .1);
+  --active-card-shadow: inset -1px 1px 1px rgba(255, 255, 255, .4), inset 0 6px 15px rgba(255, 162, 0, .4);
 
-  --pale-top: radial-gradient(3930.52% 4900.58% at 89.71% 72.89%, rgba(0, 0, 0, 0.8) 0%, rgba(33, 22, 2, 0.8) 0.01%, rgba(172, 113, 9, 0.8) 100%);
-  --pale-right: radial-gradient(4314.93% 661.69% at 88.04% 84.26%, #201502 6.25%, #C7830A 100%);
-  --pale-left: radial-gradient(5528.36% 3005.63% at 74.43% 75.84%, rgba(0, 0, 0, 0.9) 0%, rgba(33, 22, 2, 0.9) 0.01%, rgba(172, 113, 9, 0.9) 100%);
-
+  //HEATMAP LEGEND
+  --size-sample-color: radial-gradient(51.52% 129.57% at 48.48% 50%, rgba(64, 59, 54, 0) 0%, rgba(19, 18, 17, .5) 100%);
+  --size-side-color: radial-gradient(150% 252.96% at 150% 50%, rgba(64, 59, 54, .65) 0%, rgba(0, 0, 0, .65) 100%);
+  --dark-sample-color: radial-gradient(3906.1% 3815.36% at 89.06% 78.28%, rgba(19, 17, 16, .65) 0%, rgba(0, 0, 0, .65) 100%);
+  --light-sample-color: radial-gradient(5752.25% 5190.32% at 74.43% 60.32%, rgba(0, 0, 0, .9) 0%, rgba(35, 22, 0, .9) .01%, rgba(112, 92, 94, .9) 100%);
+  --pale-sample-color: radial-gradient(5528.36% 3005.63% at 74.43% 75.84%, rgba(0, 0, 0, .9) 0%, rgba(33, 22, 2, .9) .01%, rgba(172, 113, 9, .9) 100%);
+  --bright-sample-color: radial-gradient(2258.03% 620.37% at 83.33% 88.95%, #201502 0%, #C7830A 100%);
+  --size-sample-shadow: inset 0 -1px 2px rgba(255, 255, 255, .25), inset 3px 1px 16px rgba(112, 102, 94, .3);
+  --dark-sample-shadow: inset -1px 0 2px rgba(255, 255, 255, .2), inset 1px 1px 16px rgba(112, 102, 94, .2);
+  --light-sample-shadow: inset -1px 0 1px rgba(255, 255, 255, .2), inset 2px 2px 10px rgba(93, 116, 141, .6);
+  --pale-sample-shadow: inset -1px 1px 1px rgba(255, 255, 255, .2), inset 2px 2px 10px rgba(242, 159, 13, .2);
+  --bright-sample-shadow: inset -1px 1px 1px rgba(255, 255, 255, .2), inset 2px 2px 10px rgba(242, 159, 13, .9);
 }
 
 .theme_light {
-  --bg-color: linear-gradient(#fff, #fff);
-  --text-color:  #261C00;
+  --bg-color: linear-gradient(#FFF, #FFF);
+  --text-color: #261C00;
   --pale-color: #BFBFBF;
   --img-filter: none;
+  --active-button: #F4B000;
 
-  --bright-bar: linear-gradient(180deg, #FFF2D1 0.82%, #FFD66C 100%);
-  --base-bar: linear-gradient(180deg, rgba(244, 244, 244, 0.9) 0.82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
-  --shadow-bright-bar: 0px 6px 15px 0px #FFA200 40% inset, -1px 1px 1px 0px #FFFFFF 40% inset;
-  --shadow-base-bar: 2px 2px 16px 0px #676767 60% inset, -1px 1px 1px 0px #FFFFFF 20% inset;
+  //BARS
+  --bright-bar: linear-gradient(180deg, #FFF2D1 .82%, #FFD66C 100%);
+  --base-bar: linear-gradient(180deg, rgba(244, 244, 244, .9) .82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
+  --shadow-bright-bar: inset 0 6px 15px 0 rgba(255, 176, 57, .8), inset -1px 1px 1px 0 rgba(255, 255, 255, .5);
+  --shadow-base-bar: inset 2px 2px 16px 0 rgba(207, 207, 207, .5), inset -1px 1px 1px 0 rgba(255, 255, 255, .5);
 
-  --bright-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, 0.56) 81.25%, rgba(255, 239, 153, 0.32) 100%);
-  --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, 0.24) 81.25%, rgba(255, 239, 153, 0.12) 100%);
-  --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(191, 191, 191, 0.345) 82.81%, rgba(228, 228, 228, 0.1) 92.19%);
-  --light-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(166, 166, 166, 0.1725) 82.81%, rgba(203, 203, 203, 0.05) 92.19%);
+  //DIAGRAM
+  --bright-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, .56) 81.25%, rgba(255, 239, 153, .32) 100%);
+  --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, .24) 81.25%, rgba(255, 239, 153, .12) 100%);
+  --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(191, 191, 191, .345) 82.81%, rgba(228, 228, 228, .1) 92.19%);
+  --light-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(166, 166, 166, .1725) 82.81%, rgba(203, 203, 203, .05) 92.19%);
+  --bright-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .9);
+  --pale-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .4);
+  --dark-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(131, 131, 131, .6);
+  --light-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(105, 105, 105, .2);
 
-  --bright-top: radial-gradient(4723.13% 7092.83% at 89.71% 72.89%, rgba(255, 250, 237, 0.8) 0%, rgba(255, 184, 0, 0.8) 100%);
-  --bright-right: radial-gradient(63.52% 63.51% at 47.06% 29.73%, rgba(255, 184, 0, 0.4) 0%, rgba(255, 239, 153, 0.348) 100%);
-  --bright-left: radial-gradient(116.18% 129.05% at -16.18% 13.51%, #FFDD9C 0%, #FFD363 100%);
+  //CARDS
+  --hover-card: linear-gradient(180deg, rgba(244, 244, 244, .9) .82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
+  --active-card: linear-gradient(180deg, #FFF2D1 .82%, #FFD66C 100%);
+  --hover-card-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(207, 207, 207, .5);
+  --active-card-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .8);
 
-  --pale-top: radial-gradient(1700.94% 3125.96% at 89.71% 72.89%, rgba(255, 250, 237, 0.8) 3.65%, rgba(255, 237, 201, 0.8) 100%);
-  --pale-right: radial-gradient(121.55% 121.55% at 47.06% 12.07%, rgba(255, 234, 180, 0.8) 0%, rgba(255, 231, 180, 0.8) 100%);
-  --pale-left: radial-gradient(68.1% 68.1% at 4.41% 31.9%, #FFFFFE 0%, #FFF6E4 100%);
+  //HEATMAP LEGEND
+  --size-sample-color: radial-gradient(2408.25% 2730.55% at 89.06% 78.28%, rgba(255, 255, 255, .8) 0%, rgba(255, 255, 255, .8) 100%);
+  --size-side-color: radial-gradient(2408.25% 2730.55% at 89.06% 78.28%, rgba(255, 255, 255, .8) 0%, rgba(255, 255, 255, .8) 100%);
+  --dark-sample-color: radial-gradient(2408.25% 2730.55% at 89.06% 78.28%, rgba(250, 250, 250, .6) 0%, rgba(250, 250, 250, .6) 100%);
+  --light-sample-color: radial-gradient(2408.25% 2730.55% at 89.06% 78.28%, rgba(250, 250, 250, .8) 0%, rgba(250, 250, 250, .8) 100%);
+  --pale-sample-color: radial-gradient(68.1% 68.1% at 4.41% 31.9%, #FFF6DD 8.72%, #FFFEFA 100%);
+  --bright-sample-color: radial-gradient(66.02% 86.49% at -16.18% 13.51%, rgba(255, 186, 6, .85) 0%, #FFF2AD 100%);
+  --size-sample-shadow: inset -1px 0 2px rgba(255, 255, 255, .2), inset 1px 1px 16px rgba(103, 103, 103, .2);
+  --dark-sample-shadow: inset -1px 0 2px rgba(250, 250, 250, .2), inset 1px 1px 16px rgba(106, 106, 106, .2);
+  --light-sample-shadow: inset -1px 0 2px rgba(250, 250, 250, .2), inset 1px 1px 16px rgba(106, 106, 106, .3);
+  --pale-sample-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .4);
+  --bright-sample-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .4);
 }
-
-
