--- a/src/scss/_base/_typography.scss
+++ b/src/scss/_base/_typography.scss
@@ -12,14 +12,7 @@ body {
 }
 
 .title {
-  font-size: 30px;
-  line-height: 32px;
-  font-weight: 700;
-
-  @include minScreen(1440px) {
-    font-size: 45px;
-    line-height: 50px;
-  }
+  @include title;
 
   &_main {
     margin-top: auto;
@@ -33,20 +26,12 @@ body {
 
     @include minScreen(1440px) {
       margin-bottom: 20px;
-      margin-bottom: 20px;
     }
   }
 }
 
 .subtitle {
-  font-size: 20px;
-  line-height: 22px;
-  font-weight: 700;
-
-  @include minScreen(1440px) {
-    font-size: 30px;
-    line-height: 32px;
-  }
+  @include subtitle;
 
   &_main {
     text-align: center;
@@ -59,13 +44,7 @@ body {
 }
 
 .caption {
-  font-size: 14px;
-  line-height: 16px;
-
-  @include minScreen(1440px) {
-    font-size: 16px;
-    line-height: 18px;
-  }
+  @include caption;
 }
 
 .pale {
