--- a/src/scss/_layouts/_template.scss
+++ b/src/scss/_layouts/_template.scss
@@ -8,6 +8,7 @@ body {
   width: 100%;
   height: 100%;
   background-image: var(--bg-color);
+  color: var(--text-color);
   padding-top: 20px;
   display: flex;
   flex-direction: column;
