--- a/src/scss/_base/_theme.scss
+++ b/src/scss/_base/_theme.scss
@@ -17,11 +17,11 @@
   --bright-radial: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 0, .8) 0%, rgba(91, 66, 0, .8) 100%);
   --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(99, 63, 0, .5) 72.92%, rgba(15, 9, 0, .5) 100%);
   --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(77, 77, 77, .5) 71.88%, rgba(56, 41, 0, .5) 100%);
-  --light-radial: radial-gradient(rgba(151, 151, 151, 0.5) 0%, rgba(41, 41, 41, 0.5) 100%);
+  --light-radial: linear-gradient(to top, rgba(151, 151, 151, 0.5), rgba(41, 41, 41, 0.5));
   --bright-radial-shadow: 0 0 20px -8px rgba(248, 158, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 162, 0, .9);
   --pale-radial-shadow: 0 0 20px -8px rgba(147, 93, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(202, 129, 0, .9);
-  --dark-radial-shadow: 0 0 20px -8px rgba(96, 96, 96, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(38, 38, 38, .9);
-  --light-radial-shadow: 0 0 20px -8px rgba(0, 0, 0, .2), inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(139, 139, 139, .9);
+  --dark-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(38, 38, 38, .9);
+  --light-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5);
 
   //CARDS
   --hover-card: radial-gradient(85.62% 148.33% at 49.85% 100%, rgba(68, 58, 42, .7864) 0%, rgba(0, 0, 0, .8) 100%);
