--- a/src/scss/_layouts/_diagram.scss
+++ b/src/scss/_layouts/_diagram.scss
@@ -89,21 +89,21 @@
   }
 
   &__donut-segment {
-    &:first-child {
-      filter: drop-shadow(0px 0px 20px rgba(248, 158, 0, 0.2));
-    }
-
-    &:nth-child(2) {
-      filter: drop-shadow(0px 0px 20px rgba(147, 93, 0, 0.2));
-    }
-
-    &:nth-child(3) {
-      filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.2));
-    }
-
-    &:nth-child(4) {
-      filter: drop-shadow(0px 0px 20px rgba(96, 96, 96, 0.2));
-    }
+    //&:first-child {
+    //  filter: drop-shadow(0px 0px 20px rgba(248, 158, 0, 0.2)) url(#shadow-dark-0);
+    //}
+    //
+    //&:nth-child(2) {
+    //  filter: drop-shadow(0px 0px 20px rgba(147, 93, 0, 0.2)) url(#shadow-dark-1);
+    //}
+    //
+    //&:nth-child(3) {
+    //  filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.2)) url(#shadow-dark-2);
+    //}
+    //
+    //&:nth-child(4) {
+    //  filter: drop-shadow(0px 0px 20px rgba(96, 96, 96, 0.2)) url(#shadow-dark-3);
+    //}
 
     .theme_light &:first-child,
     .theme_light &:nth-child(2),
