--- a/src/scss/_layouts/_vote.scss
+++ b/src/scss/_layouts/_vote.scss
@@ -132,9 +132,9 @@
         top: -1px;
       }
 
-      &:nth-of-type(5) {
-        top: -2px;
-      }
+      //&:nth-of-type(5) {
+      //  top: -2px;
+      //}
 
       &:first-of-type,
       &:nth-of-type(4),
@@ -143,7 +143,7 @@
       }
 
       &:nth-of-type(3),
-      &:nth-of-type(5),
+      &:nth-of-type(6),
       &:nth-of-type(8) {
         right: 1px;
       }
