--- a/src/scss/_layouts/_vote.scss
+++ b/src/scss/_layouts/_vote.scss
@@ -12,7 +12,7 @@
   align-items: center;
 
   @include maxScreen(480px) {
-    padding: 24px 23px 22px;
+    padding: 23px 24px;
     grid-column-gap: 8px;
     grid-row-gap: 22px;
   }
@@ -128,25 +128,25 @@
 
     //во имя пиксель-перфекта
     @include maxScreen(480px) {
-      &:not(:nth-of-type(2)) {
-        top: -1px;
+      &:nth-of-type(2) {
+        top: 1px;
       }
 
       //&:nth-of-type(5) {
       //  top: -2px;
       //}
 
-      &:first-of-type,
-      &:nth-of-type(4),
-      &:nth-of-type(7) {
-        left: 1px;
-      }
-
-      &:nth-of-type(3),
-      &:nth-of-type(6),
-      &:nth-of-type(8) {
-        right: 1px;
-      }
+      //&:first-of-type,
+      //&:nth-of-type(4),
+      //&:nth-of-type(7) {
+      //  left: 1px;
+      //}
+      //
+      //&:nth-of-type(3),
+      //&:nth-of-type(6),
+      //&:nth-of-type(8) {
+      //  right: 1px;
+      //}
     }
 
     @include screen(481px, 767px) {
