tweak chosen card on vote

--- a/src/scss/_layouts/_vote.scss
+++ b/src/scss/_layouts/_vote.scss
@@ -128,9 +128,9 @@
 
     //во имя пиксель-перфекта
     @include maxScreen(480px) {
-      &:nth-of-type(2) {
-        top: -1px;
-      }
+      //&:nth-of-type(2) {
+      //  top: -1px;
+      //}
 
       &:nth-of-type(5) {
         top: -2px;
