--- a/src/scss/_base/_fonts.scss
+++ b/src/scss/_base/_fonts.scss
@@ -1,20 +1,22 @@
-@font-face {
-  font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Regular.ttf') format('ttf');
-  font-weight: 400;
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Medium.ttf') format('ttf');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Bold.ttf') format('ttf');
-  font-weight: 700;
-  font-style: normal;
-}
+//@font-face {
+//  font-family: Roboto;
+//  src: url('./assets/fonts/Roboto-Regular.ttf') format('ttf');
+//  font-weight: normal;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: Roboto;
+//  src: url('./assets/fonts/Roboto-Medium.ttf') format('ttf');
+//  font-weight: 500;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: Roboto;
+//  src: url('./assets/fonts/Roboto-Bold.ttf') format('ttf');
+//  font-weight: 700;
+//  font-style: normal;
+//}
